--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,12 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/video.js/dist/video-js.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/video.js/dist/video.js"
+            ]
           },
           "configurations": {
             "production": {
