--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ngx-webcam": "^0.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "video.js": "^7.17.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/video.js": "^7.3.28",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
